[package]
name = "bytes_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
duration-str = "0.17.0"
poise = "0.6.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serenity = "0.12"
shuttle-runtime = "0.56.0"
shuttle-serenity = "0.56.0"
thiserror = "2.0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
